objects/Technical_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>AIs_Closed_LT_Eq_7_days__c</fullName>
        <label>AIs: Closed &lt;= 7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIs_New_LT_Eq_7_days__c</fullName>
        <label>AIs: New &lt;=7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIs_Open_GT_7_days__c</fullName>
        <label>AIs: Open &gt; 7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that the TE is attached. Link in Salesforce to Account Details page</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Technical Engagements</relationshipLabel>
        <relationshipName>Technical_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blockers_Closed_LT_Eq_7_days__c</fullName>
        <label>Blockers: Closed &lt;= 7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blockers_New_LT_Eq_7_Days__c</fullName>
        <label>Blockers: New &lt;= 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blockers_Open_LT_7_days__c</fullName>
        <label>Blockers: Open &gt; 7 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Objectives__c</fullName>
        <label>Business Objectives</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_GT_7_days_old__c</fullName>
        <label>% Complete&gt; 7 days old</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Complete_LT_Eq_7_days_old__c</fullName>
        <label>% Complete&lt;= 7 days old</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date_Changes_Last_7_Days__c</fullName>
        <description>Green is date brought in. Red if date pushed out</description>
        <formula>&quot;test&quot;</formula>
        <label>End Date Changes Last 7 Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieldRegion__c</fullName>
        <label>Field Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_Tracker__c</fullName>
        <description>The link to the engagement in the icd tracker</description>
        <formula>HYPERLINK(&quot;http://tems/engagement/?id=&quot; &amp; Mysql_Id__c, Mysql_Id__c)</formula>
        <label>Tracker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Comment__c</fullName>
        <label>Latest Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metrics_added_7_days__c</fullName>
        <label>Metrics added &lt;= 7 days</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mysql_Id__c</fullName>
        <description>The id in mysql</description>
        <externalId>true</externalId>
        <label>TE Id</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Next steps to be taken</description>
        <label>Next Steps</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity ID that the TE is attached</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Technical Engagements</relationshipLabel>
        <relationshipName>Technical_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <formula>Account__r.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>MySql Project ID that the TE is attached</description>
        <label>Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>what stage is the engagement in (eval, discovery, etc. whatever they chose to use)</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Establish Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Changed_Last_7_Days__c</fullName>
        <description>Green is date brought in. Red if date pushed out</description>
        <formula>&quot;test&quot;</formula>
        <label>Start Date Changed Last 7 Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Green, yellow, red. Is everything going well or are there problems</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <color>#BBBBBB</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed won</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed lost</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
                <color>#3366FF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Technology segmentation as defined in MySQL.</description>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackerLink__c</fullName>
        <description>The link to the engagement in the internal system.</description>
        <formula>HYPERLINK(&quot;http://tems/engagement/?id=&quot; &amp; Mysql_Id__c, Mysql_Id__c)</formula>
        <label>Tracker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>$ impact of the engagement</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>not_yet_completed__c</fullName>
        <label>% not yet completed</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Technical Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>ICD_Tracker__c</columns>
        <columns>Status__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>FieldRegion__c</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Technology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>FieldRegion__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>ICD_Tracker__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Campaign_Type__c</columns>
        <columns>Technology__c</columns>
        <columns>Project_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <label>Lindy&apos;s TE View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Technical Engagements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>